--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "next-boilerplate",
+	"name": "next-tailwindcss-boilerplate",
 	"version": "0.1",
 	"private": false,
 	"author": {
@@ -14,9 +14,6 @@
 		"prod": "yarn build && yarn start"
 	},
 	"dependencies": {
-		"@material-ui/core": "^4.11.3",
-		"@material-ui/icons": "^4.11.2",
-		"@material-ui/lab": "^4.0.0-alpha.57",
 		"next": "^10.0.7",
 		"next-compose-plugins": "^2.2.1",
 		"next-pwa": "^5.0.5",
@@ -26,10 +23,13 @@
 		"zustand": "^3.3.1"
 	},
 	"devDependencies": {
+		"@types/nprogress": "^0.2.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
-		"@types/nprogress": "^0.2.0",
 		"@types/styled-jsx": "^2.2.8",
+		"autoprefixer": "^10.2.5",
+		"postcss": "^8.2.7",
+		"tailwindcss": "^2.0.3",
 		"typescript": "^4.1.3"
 	}
 }
